--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,10 @@ section{
  
 }
 footer{
-height: 500px;
 background-color: black;
+color: white;
+text-align: center;
+padding: 80px;
 }
 nav{
     display: flex;
@@ -27,6 +29,7 @@ ul{
     width: 500px;
     justify-content: space-around;
 }
+
 li{
     /* width: 200px; */
     list-style: none;
@@ -114,6 +117,12 @@ h2{
     display: flex;
     justify-content: space-around;
 }
+@media only screen and (max-width:1000px){
+    .project-container{
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
 .alternative{
     display: flex;
     text-align: center;
@@ -134,4 +143,11 @@ hr{
 .links{
     text-decoration: none;
     color: #ef744b;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+.cont{
+  padding-right: 40px;
 }
